--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,90 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap');
+.main-container {
+    margin-top: 20px;
+}
+
+body {
+    padding-bottom: 50px;
+}
+
+.house-card {
+    padding-top: 40px;
+}
+
+#img-style {
+    width: 60%;
+    height: 50%;
+    margin: 10px auto;
+    border-radius: 1%;
+}
+
+.textClass {
+    margin-top: 2%;
+    margin-left: 2%;
+    font-family: 'Lato', sans-serif;
+    font-size: 30px;
+}
+
+.house-button {
+    margin-top: 10px;
+    margin-left: 25%;
+}
+
+.text-m {
+    margin-left: 2%;
+    font-family: 'Lato', sans-serif;
+}
+
+.text-f {
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+}
+
+#cardId {
+    width: 100%;
+    height: 95%;
+}
+
+#card-footer-style {
+    padding-top: 0px !important;
+}
+
+.card {
+    background-color: #F5F5F5;
+}
+
+.back-style {
+    width: 100%;
+}
+
+
+/* Animaciones */
+
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.fast {
+    -webkit-animation-duration: 0.4s;
+    animation-duration: 0.4s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    animation-name: fadeIn;
+}
